@@ -4,6 +4,11 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04b: *********************************
 
+IMP: (10/31/05, SMR) IRSIM and ALS give better errors when no signal is selected (Bug #710).
+
+IMP: (10/31/05, SMR) Silicon compiler works when number of cells is less than
+     the number of rows.  Also finds layout technologies better (Bug #708).
+
 IMP: (10/31/05, GVG) Undo.Type converted into typesafe enum.
 
 IMP/MAN: (10/30/05, GVG) TSMC1080.xml ready with all TSMC rules for 180nm tech
